Fix remaining 47 errors: GameEventType, HOURS_PER_DAY, INITIAL_CSP, GameEvent methods, tactic classes, DomainEvent compatibility